--- a/scripts/view/dashboard/projects/reports.html
+++ b/scripts/view/dashboard/projects/reports.html
@@ -8,33 +8,36 @@
         <a href="#" class="btn-link" onclick="return goto_week('{{report.week_offset + 1}}');" style="font-size: 2.5em"><i class="fa fa-chevron-circle-right"></i></a>
     </div>
     <hr class="mx-0 my-1">
-    
-    <div class="p-4">
-        <h4><i class="fa fa-smile-o mr-2"></i>本周已验收</h4>
-        <ul class="mt-4 px-4" style="list-style-type: none">
-            {% for _, task in ipairs(report.archived) do %}
-            <li class="mb-1">
-                <input type="checkbox" checked disabled>
-                <a href="#" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
-                <span class="badge badge-dark text-white ml-2">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-dark text-white">{{task.assigned_name}}</span>
-                <i class="fa fa-calendar mx-1"></i>{{tostring(task.start_time) .. ' 至 ' .. tostring(task.end_time)}}
-            </li>
-            {% end %}
-        </ul>
-    </div>
 
-    <div class="p-4">
-        <h4><i class="fa fa-frown-o mr-2"></i>本周该验收但未能验收的任务</h4>
-        <ul class="mt-4 px-4" style="list-style-type: none">
-            {% for _, task in ipairs(report.not_archived) do %}
-            <li class="mb-1">
-                <input type="checkbox" disabled>
-                <a href="#" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
-                <span class="badge badge-dark text-white ml-2">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-dark text-white">{{task.assigned_name}}</span>
-                <i class="fa fa-calendar mx-1"></i>{{tostring(task.start_time) .. ' 至 ' .. tostring(task.end_time)}}
-            </li>
-            {% end %}
-        </ul>
+    <div class="container mt-4 p-4">
+        <div class="row">
+            <div class="col-md-6">
+                <h4><i class="fa fa-smile-o mr-2"></i>本周已验收</h4>
+                <ul class="mt-4 px-4" style="list-style-type: none">
+                    {% for _, task in ipairs(report.archived) do %}
+                    <li class="mb-1">
+                        <input type="checkbox" checked disabled>
+                        <a href="#" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
+                        <span class="badge badge-dark text-white ml-1">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-dark text-white">{{task.assigned_name}}</span>
+                        <i class="fa fa-calendar mx-1"></i>{{tostring(task.start_time) .. '/' .. tostring(task.end_time)}}
+                    </li>
+                    {% end %}
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <h4><i class="fa fa-frown-o mr-2"></i>本周该验收但未能验收的任务</h4>
+                <ul class="mt-4 px-4" style="list-style-type: none">
+                    {% for _, task in ipairs(report.not_archived) do %}
+                    <li class="mb-1">
+                        <input type="checkbox" disabled>
+                        <a href="#" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
+                        <span class="badge badge-dark text-white ml-1">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-dark text-white">{{task.assigned_name}}</span>
+                        <i class="fa fa-calendar mx-1"></i>{{tostring(task.start_time) .. '/' .. tostring(task.end_time)}}
+                    </li>
+                    {% end %}
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
 
