change style for project reports

--- a/scripts/view/dashboard/tasks/mode_normal.html
+++ b/scripts/view/dashboard/tasks/mode_normal.html
@@ -12,7 +12,7 @@
                         <span class="d-inline-block text-truncate mw-100">                            
                             <span class="{{weights[info.weight].color}}">【{{weights[info.weight].title}}】</span>
                             <span class="text-muted">#{{info.id}}</span>
-                            <a href="#" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
+                            <a href="#" class="task-link" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
                         </span><br>
                         {% if #info.tags > 0 then %}
                         <span class="d-inline-block text-truncate mw-100">
@@ -48,7 +48,7 @@
                         <span class="d-inline-block text-truncate mw-100">                            
                             <span class="{{weights[info.weight].color}}">【{{weights[info.weight].title}}】</span>
                             <span class="text-muted">#{{info.id}}</span>
-                            <a href="#" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
+                            <a href="#" class="task-link" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
                         </span><br>
                         {% if #info.tags > 0 then %}
                         <span class="d-inline-block text-truncate mw-100">
@@ -84,7 +84,7 @@
                         <span class="d-inline-block text-truncate mw-100">                            
                             <span class="{{weights[info.weight].color}}">【{{weights[info.weight].title}}】</span>
                             <span class="text-muted">#{{info.id}}</span>
-                            <a href="#" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
+                            <a href="#" class="task-link" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
                         </span><br>
                         {% if #info.tags > 0 then %}
                         <span class="d-inline-block text-truncate mw-100">
@@ -120,7 +120,7 @@
                         <span class="d-inline-block text-truncate mw-100">                            
                             <span class="{{weights[info.weight].color}}">【{{weights[info.weight].title}}】</span>
                             <span class="text-muted">#{{info.id}}</span>
-                            <a href="#" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
+                            <a href="#" class="task-link" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
                         </span><br>
                         {% if #info.tags > 0 then %}
                         <span class="d-inline-block text-truncate mw-100">
