--- a/scripts/view/dashboard/projects/reports.html
+++ b/scripts/view/dashboard/projects/reports.html
@@ -7,17 +7,17 @@
         </div>
         <a href="#" class="btn-link" onclick="return goto_week('{{report.week_offset + 1}}');" style="font-size: 2.5em"><i class="fa fa-chevron-circle-right"></i></a>
     </div>
-    <hr class="mx-0 my-1">
 
-    <div class="container mt-4 p-4">
+    <div class="container mt-4">
         <div class="row">
             <div class="col-md-6">
-                <h4><i class="fa fa-smile-o mr-2"></i>本周已验收</h4>
-                <ul class="mt-4 px-4" style="list-style-type: none">
+                <h5><i class="fa fa-smile-o mr-2"></i>本周已验收</h5>
+                <hr>
+                <ul class="mt-4 px-0" style="list-style-type: none">
                     {% for _, task in ipairs(report.archived) do %}
-                    <li class="mb-1">
-                        <input type="checkbox" checked disabled>
-                        <a href="#" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
+                    <li class="my-2">
+                        <i class="fa fa-check text-success"></i>
+                        <a href="#" class="task-link" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
                         <span class="badge badge-dark text-white ml-1">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-dark text-white">{{task.assigned_name}}</span>
                         <i class="fa fa-calendar mx-1"></i>{{tostring(task.start_time) .. '/' .. tostring(task.end_time)}}
                     </li>
@@ -25,12 +25,13 @@
                 </ul>
             </div>
             <div class="col-md-6">
-                <h4><i class="fa fa-frown-o mr-2"></i>本周该验收但未能验收的任务</h4>
-                <ul class="mt-4 px-4" style="list-style-type: none">
+                <h5><i class="fa fa-frown-o mr-2"></i>本周该验收但未能验收的任务</h5>
+                <hr>
+                <ul class="mt-4 px-0" style="list-style-type: none">
                     {% for _, task in ipairs(report.not_archived) do %}
-                    <li class="mb-1">
-                        <input type="checkbox" disabled>
-                        <a href="#" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
+                    <li class="my-2">
+                        <i class="fa fa-close text-danger"></i>
+                        <a href="#" class="task-link" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
                         <span class="badge badge-dark text-white ml-1">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-dark text-white">{{task.assigned_name}}</span>
                         <i class="fa fa-calendar mx-1"></i>{{tostring(task.start_time) .. '/' .. tostring(task.end_time)}}
                     </li>
