--- a/scripts/view/dashboard/projects/reports.html
+++ b/scripts/view/dashboard/projects/reports.html
@@ -11,28 +11,28 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-6">
-                <h5><i class="fa fa-smile-o mr-2"></i>本周已验收</h5>
+                <h5><i class="fa fa-smile-o mr-2"></i>已验收的任务</h5>
                 <hr>
                 <ul class="mt-4 px-0" style="list-style-type: none">
                     {% for _, task in ipairs(report.archived) do %}
-                    <li class="my-2">
+                    <li class="d-inline-block text-truncate text-muted mw-100">
                         <i class="fa fa-check text-success"></i>
                         <a href="#" class="task-link" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
-                        <span class="badge badge-dark text-white ml-1">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-dark text-white">{{task.assigned_name}}</span>
+                        <span class="badge badge-secondary text-white ml-1">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-secondary text-white">{{task.assigned_name}}</span>
                         <i class="fa fa-calendar mx-1"></i>{{tostring(task.start_time) .. '/' .. tostring(task.end_time)}}
                     </li>
                     {% end %}
                 </ul>
             </div>
             <div class="col-md-6">
-                <h5><i class="fa fa-frown-o mr-2"></i>本周该验收但未能验收的任务</h5>
+                <h5><i class="fa fa-frown-o mr-2"></i>未验收的任务</h5>
                 <hr>
                 <ul class="mt-4 px-0" style="list-style-type: none">
                     {% for _, task in ipairs(report.not_archived) do %}
-                    <li class="my-2">
+                    <li class="d-inline-block text-truncate text-muted mw-100">
                         <i class="fa fa-close text-danger"></i>
                         <a href="#" class="task-link" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
-                        <span class="badge badge-dark text-white ml-1">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-dark text-white">{{task.assigned_name}}</span>
+                        <span class="badge badge-secondary text-white ml-1">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-secondary text-white">{{task.assigned_name}}</span>
                         <i class="fa fa-calendar mx-1"></i>{{tostring(task.start_time) .. '/' .. tostring(task.end_time)}}
                     </li>
                     {% end %}
