--- a/scripts/view/layout_base.html
+++ b/scripts/view/layout_base.html
@@ -37,7 +37,7 @@
 				{% if session.uid then %}
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#" onclick="return openProfile();">
+						<a id="navbar-name" class="nav-link" href="#" onclick="return openProfile();">
           					<img id="navbar-avatar" src="{{session.avatar}}" width="20px" height="20px" class="rounded-circle" style="margin-top: -2px"> {{session.name}}
 						</a>
 					</li>
