--- a/scripts/view/dashboard/tasks/task_info.html
+++ b/scripts/view/dashboard/tasks/task_info.html
@@ -74,7 +74,7 @@
                 {% elseif task.info.status == 3 then %}
                 <i class="fa fa-check-circle mr-1"></i>已完成
                 {% else %}
-                <i class="fa fa-archive mr-1"></i>已归档
+                <i class="fa fa-archive mr-1"></i>已验收
                 {% end %}
             </div>
             <div class="dropdown-menu">
