--- a/scripts/view/dashboard/projects/archive.html
+++ b/scripts/view/dashboard/projects/archive.html
@@ -1,72 +1,38 @@
 <div class="m-2">
-    <i class="fa fa-eye mr-1"></i><label class="title mr-1">归档管理</label>
-    <hr class="m-0">
-
-    <div class="container-fluid mt-2">
+    <div class="container-fluid mt-4">
         <div class="row">
             <!-- 可归档列表 -->
             <div class="col-6">
-                <div class="card text-white shadow bg-success">
-                    <div class="card-header px-2 py-1">
-                        <i class="fa fa-check-circle mr-2"></i>可归档
-                    </div>
-    
-                    <div class="card-body m-0 p-0">
-                        {% for _, info in ipairs(tasks) do %}
-                        {% if info.status == 3 then %}
-                        <div class="card text-dark m-1 rounded-0">
-                            <div class="card-body m-0 py-1 px-2">
-                                <span class="d-inline-block text-truncate mw-100">                  
-                                    <span class="{{weights[info.weight].color}}">【{{weights[info.weight].title}}】</span>
-                                    <span class="text-muted">#{{info.id}}</span>
-                                    <a href="#" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
-                                </span><br>
-                                {% if #info.tags > 0 then %}
-                                <span class="d-inline-block text-truncate mw-100">
-                                    {% for _, tag in ipairs(info.tags) do %}
-                                    <span class="badge {{tags[tag].color}} mr-1">{{tags[tag].title}}</span>
-                                    {% end %}
-                                </span><br>
-                                {% end %}
-                                <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
-                                    <i class="fa fa-calendar mr-1"></i>{{string.format('%04d-%02d-%02d', info.end_time.year, info.end_time.month, info.end_time.day)}}
-                                    <span class="pull-right">
-                                        <span class="badge badge-dark text-white ml-2">{{info.creator_name}}</span>
-                                        <i class="fa fa-chevron-right mx-1"></i>
-                                        <span class="badge badge-dark text-white">{{info.assigned_name}}</span>
-                                    </span>
-                                </small>
-                            </div>
-                        </div>
-                        {% end %}
-                        {% end %}
-                    </div>
-                </div>
+                <h5>待验收的任务</h5>
+                <hr>
+                <ul class="mt-2 px-0" style="list-style-type: none">
+                    {% for _, info in ipairs(tasks) do %}
+                    {% if info.status == 3 then %}
+                    <li class="d-block text-truncate text-muted mw-100 mb-1">
+                        <i class="fa fa-clock-o mr-1"></i>{{string.format('%04d.%02d.%02d', info.end_time.year, info.end_time.month, info.end_time.day)}}
+                        <a href="#" class="task-link" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
+                        <span class="badge badge-secondary text-white ml-1">{{info.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-secondary text-white">{{info.assigned_name}}</span>
+                    </li>
+                    {% end %}
+                    {% end %}
+                </ul>
             </div>
 
             <!-- 已归档列表 -->
             <div class="col-6">
-                <div class="card text-white shadow bg-dark">
-                    <div class="card-header px-2 py-1">
-                        <i class="fa fa-archive mr-2"></i>已归档
-                    </div>
-    
-                    <div class="card-body m-0 p-0">
-                        {% for _, info in ipairs(tasks) do %}
-                        {% if info.status == 4 then %}
-                        <div class="card text-dark m-1 rounded-0">
-                            <div class="card-body m-0 py-1 px-2">
-                                <span class="d-inline-block text-truncate mw-100">                            
-                                    <span class="{{weights[info.weight].color}}">【{{weights[info.weight].title}}】</span>
-                                    <span class="text-muted">#{{info.id}}</span>
-                                    <a href="#" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
-                                </span>
-                            </div>
-                        </div>
-                        {% end %}
-                        {% end %}
-                    </div>
-                </div>
+                <h5>已验收的任务</h5>
+                <hr>
+                <ul class="mt-2 px-0" style="list-style-type: none">
+                    {% for _, info in ipairs(tasks) do %}
+                    {% if info.status == 4 then %}
+                    <li class="d-block text-truncate text-muted mw-100 mb-1">
+                        <i class="fa fa-check text-success mr-1"></i>{{string.format('%04d.%02d.%02d', info.end_time.year, info.end_time.month, info.end_time.day)}}
+                        <a href="#" class="task-link" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
+                        <span class="badge badge-secondary text-white ml-1">{{info.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-secondary text-white">{{info.assigned_name}}</span>
+                    </li>
+                    {% end %}
+                    {% end %}
+                </ul>
             </div>
         </div>
     </div>
