--- a/scripts/view/dashboard/tasks/mode_normal.html
+++ b/scripts/view/dashboard/tasks/mode_normal.html
@@ -22,7 +22,7 @@
                         </span><br>
                         {% end %}
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
-                            <i class="fa fa-calendar mr-1"></i>{{string.format('%04d-%02d-%02d', info.end_time.year, info.end_time.month, info.end_time.day)}}
+                            <i class="fa fa-calendar mr-1"></i>{{string.format('%02d.%02d', info.end_time.month, info.end_time.day)}}
                             <span class="pull-right">
                                 <span class="badge badge-dark text-white ml-2">{{info.creator_name}}</span>
                                 <i class="fa fa-chevron-right mx-1"></i>
@@ -58,7 +58,7 @@
                         </span><br>
                         {% end %}
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
-                            <i class="fa fa-calendar mr-1"></i>{{string.format('%04d-%02d-%02d', info.end_time.year, info.end_time.month, info.end_time.day)}}
+                            <i class="fa fa-calendar mr-1"></i>{{string.format('%02d.%02d', info.end_time.month, info.end_time.day)}}
                             <span class="pull-right">
                                 <span class="badge badge-dark text-white ml-2">{{info.creator_name}}</span>
                                 <i class="fa fa-chevron-right mx-1"></i>
@@ -94,7 +94,7 @@
                         </span><br>
                         {% end %}
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
-                            <i class="fa fa-calendar mr-1"></i>{{string.format('%04d-%02d-%02d', info.end_time.year, info.end_time.month, info.end_time.day)}}
+                            <i class="fa fa-calendar mr-1"></i>{{string.format('%02d.%02d', info.end_time.month, info.end_time.day)}}
                             <span class="pull-right">
                                 <span class="badge badge-dark text-white ml-2">{{info.creator_name}}</span>
                                 <i class="fa fa-chevron-right mx-1"></i>
@@ -130,7 +130,7 @@
                         </span><br>
                         {% end %}
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
-                            <i class="fa fa-calendar mr-1"></i>{{string.format('%04d-%02d-%02d', info.end_time.year, info.end_time.month, info.end_time.day)}}
+                            <i class="fa fa-calendar mr-1"></i>{{string.format('%02d.%02d', info.end_time.month, info.end_time.day)}}
                             <span class="pull-right">
                                 <span class="badge badge-dark text-white ml-2">{{info.creator_name}}</span>
                                 <i class="fa fa-chevron-right mx-1"></i>
