--- a/scripts/view/layout_base.html
+++ b/scripts/view/layout_base.html
@@ -29,27 +29,15 @@
 				{{config.app.name}}
 			</a>
 
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#user-menu" aria-controls="user-menu" aria-expanded="false" aria-label="Toggle Menu">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class="collapse navbar-collapse" id="user-menu">
-				{% if session.uid then %}
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a id="navbar-name" class="nav-link" href="#" onclick="return openProfile();">
-          					<img id="navbar-avatar" src="{{session.avatar}}" width="20px" height="20px" class="rounded-circle" style="margin-top: -2px"> {{session.name}}
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link">|</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/user/logout/"><i class="fa fa-sign-out mr-1"></i>注销</a>
-					</li>
-				</ul>
-				{% end %}
-			</div>
+			{% if session.uid then %}
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="#" onclick="return openProfile();">
+						<img id="navbar-avatar" src="{{session.avatar}}" width="20px" height="20px" class="rounded-circle" style="margin-top: -2px"> <span id="navbar-name">{{session.name}}</span>
+					</a>
+				</li>
+			</ul>
+			{% end %}
 		</nav>
 
 		<div id="profile-pane" class="profile-pane shadow invisible">
