--- a/scripts/view/user/profile/index.html
+++ b/scripts/view/user/profile/index.html
@@ -7,6 +7,7 @@
         
         <p class="text-muted">{{session.account}}</p>
         <button type="button" class="btn btn-primary mt-4" data-toggle="modal" data-target="#mdl-mod-pswd">修改密码</button><br>
+        <a href="/user/logout/" class="btn btn-default mt-2">退出登录</a>
         <a class="text-center profile-pane-close text-muted" onclick="return closeProfile();" style="font-size: 1.5em;">
             <i class="fa fa-close"></i>
         </a>
@@ -80,7 +81,7 @@ function open_edit_name() {
     input.val(name);
     input.keydown(function(ev) {
         if (ev.keyCode == 13) {
-            mod_user_name($(this).val(), org);
+            mod_user_name($(this).val(), name);
         } else if (ev.keyCode == 27) {
             $('#profile-name').empty();
             $('#profile-name').append(org);
@@ -92,15 +93,17 @@ function open_edit_name() {
     input.focus();
 }
 
-function mod_user_name(name, dom) {
+function mod_user_name(name, org) {
     $.post('/user/profile/set_name', {name: name}, function(ret) {
+        var display = org;
+
         if (ret.ok) {
-            dom.text(name);
+            display = name;
             $('#navbar-name').text(name);
         }
 
         $('#profile-name').empty();
-        $('#profile-name').append(dom);
+        $('#profile-name').append('<h3>' + name + '<sup><i class="fa fa-pencil-square-o ml-1 btn-link" onclick="return open_edit_name();"></i></sup></h3>');
     });
 }
 
