--- a/scripts/view/dashboard/admin/index.html
+++ b/scripts/view/dashboard/admin/index.html
@@ -4,7 +4,7 @@
 <div class="menublock border-right p-2">
     <ul class="flex-column px-2">
         <li class="d-flex">
-            <a class="menu-link" href="#" onclick="return open_admin('/dashboard/admin/users');"><i class="fa fa-list-alt mr-2"></i>管理用户</a>
+            <a class="menu-link active" href="#" onclick="return open_admin('/dashboard/admin/users');"><i class="fa fa-list-alt mr-2"></i>管理用户</a>
         </li>
     </ul>
 </div>
