change summary layout for tasks

--- a/scripts/view/dashboard/tasks/index.html
+++ b/scripts/view/dashboard/tasks/index.html
@@ -11,24 +11,24 @@
         </div>
     </div>
     <hr class="m-0">
-    <div class="container-fluid p-4" style="color:rgb(102, 102, 102); font-size: .75em;">
-        <div class="row">
-            <div class="col-6 text-center">
+    <div class="p-4 mx-2" style="color:rgb(102, 102, 102); font-size: .75em;">
+        <div class="row border-bottom">
+            <div class="col-6 text-center border-right p-2">
                 <h2>{{summary.opened}}</h2>
                 <i class="fa fa-circle-o mr-1"></i>待办中
             </div>
-            <div class="col-6 text-center">
+            <div class="col-6 text-center p-2">
                 <h2>{{summary.underway}}</h2>
                 <i class="fa fa-dot-circle-o mr-1"></i>进行中
             </div>
         </div>
 
-        <div class="row pt-2">
-            <div class="col-6 text-center">
+        <div class="row">
+            <div class="col-6 text-center border-right p-2">
                 <h2>{{summary.delayed}}</h2>
                 <i class="fa fa-exclamation-circle mr-1"></i>已滞后
             </div>
-            <div class="col-6 text-center">
+            <div class="col-6 text-center p-2">
                 <h2>{{summary.closed}}</h2>
                 <i class="fa fa-check-circle mr-1"></i>已完成
             </div>
