--- a/www/css/site.css
+++ b/www/css/site.css
@@ -127,6 +127,12 @@
 .task-view-pane-close:focus {
     outline: 0;
 }
+.task-card {
+    box-shadow: none;
+}
+.task-card:hover {
+    box-shadow: 0 .5rem .5rem rgba(0,0,0,.15) !important;
+}
 
 /* Text button */
 .btn-link-danger {
