--- a/scripts/view/user/login/index.html
+++ b/scripts/view/user/login/index.html
@@ -17,7 +17,7 @@
                     <input type="password" class="form-control" name="pswd" placeholder="登录密码" required>
                 </div>
                 <div class="form-check text-left">
-                    <input type="checkbox" class="form-check-input" name="remember_me" id="remember_me">
+                    <input type="checkbox" class="form-check-input" name="remember_me" id="remember_me" checked>
                     <label class="form-check-label" for="remember_me">一个月内自动登录</label>
                 </div>
                 <hr>
