fix document can NOT upload image BUG

--- a/scripts/view/dashboard/documents/index.html
+++ b/scripts/view/dashboard/documents/index.html
@@ -159,7 +159,7 @@ $('#treeview').jstree({
                                 closeable: true,
                                 iconlibrary: 'fa',
                                 height: 'd-flex flex-column h-100',
-                                uploadUrl: '/dashboard/files/upload',
+                                upload: '/dashboard/files/upload',
                                 onShow: function(e) {                           
                                     e.setContent(ret.content);
                                 },
