using fa-spinner instead of loading.gif

--- a/scripts/view/dashboard/projects/archive.html
+++ b/scripts/view/dashboard/projects/archive.html
@@ -46,7 +46,7 @@
 <script>
 function open_task(tid) {
     $('#task-info-pane').empty();
-    $('#task-info-pane').get(0).innerHTML = '<div class="text-center text-muted" style="margin-top: 10%"><img src="/www/images/loading.gif" class="mb-4"><h1>努力加载中 ...</h1></div>';
+    $('#task-info-pane').get(0).innerHTML = '<div class="text-center text-muted" style="margin-top: 40%"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></div>';
     $('#task-view').removeClass('invisible');
     $('#task-view').addClass('visible');
 
