--- a/scripts/view/dashboard/projects/members.html
+++ b/scripts/view/dashboard/projects/members.html
@@ -40,7 +40,7 @@
                 <div id="err"></div>
 
                 <div id="waiting" class="text-center text-muted">
-                    <img src="/www/images/loading.gif">
+                    <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
                     <h1>加载其他成员列表中...</h1>
                 </div>
 
