--- a/scripts/view/layout_base.html
+++ b/scripts/view/layout_base.html
@@ -25,7 +25,7 @@
 	<body style="font-family: 'Microsoft YaHei', Verdana, sans-serif, SimSun;">
 		<nav class="navbar navbar-expand-sm sticky-top navbar-dark bg-dark p-0">
 			<a class="navbar-brand" href="#" style="font-size: 1em; color: #10af88;">
-				<img src="/www/images/logo.png" width="24px" height="24px" style="margin: -6px 8px 0 8px;">
+				<img src="/www/favicon.ico" width="24px" height="24px" style="margin: -6px 8px 0 8px;">
 				{{config.app.name}}
 			</a>
 
